--- a/src/components/ReviewItem/ReviewItem.css
+++ b/src/components/ReviewItem/ReviewItem.css
@@ -1,14 +1,34 @@
 .review-item{
     display: flex;
-    
+    border: 1px solid #95A0A7;
+    width: 571px;
+    margin: 0 auto;
+    padding: 8px;
     align-items: center;
     justify-items: center;
-}
+    margin-bottom: 21px;
+} 
 .review-item img{
     width: 91px;
 }
 .item-details-container{
     display: flex;
+    margin-left: 17px;
     align-items: center;
-    justify-items: center;
+   justify-content: space-between;
+   width: 100%;
+}
+.item-details p{
+    margin: 0;
+}
+.delete-btn{
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    border: 0;
+    background-color: rgba(235, 87, 87, 0.3);
+}
+.delete-icon{
+    color: #EB5757;
+    font-size: 31px;
 }
