--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -3,3 +3,25 @@
     top: 0;
     padding: 30px 20px;
 }
+.btn-clear{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 56px;
+    background-color: #FF3030;
+   border-radius:  4px;
+   border: 0;
+   font-size: 21px;
+   color: white;
+   padding-left: 15px;
+   padding-right: 12px;
+}
+.btn-clear:hover{
+    
+   cursor: pointer;
+}
+.delete-icon-cart{
+    color: white;
+    font-size: 21px;
+}
