--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -11,6 +11,16 @@
 .cart-container{
     background-color: rgba(255, 153, 0, 0.3);
 }
+.review-btn{
+    background-color: #FF9900;
+    width: 100%;
+    height: 56px;
+    border-radius:  4px;
+   border: 0;
+   font-size: 21px;
+   color: white;
+  
+}
 @media screen and (max-width:1100px) {
     .products-container{
         grid-template-columns: repeat(2, 1fr);
