--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -21,6 +21,20 @@
    color: white;
   
 }
+.pagination{
+    margin-left: 300px;
+    margin-bottom: 50px;
+}
+
+.pagination button{
+    margin-right: 10px;
+}
+.pagination .selected{
+    background-color: goldenrod;
+    border:gold;
+    font-weight: bold;
+    width: 40px;
+}
 @media screen and (max-width:1100px) {
     .products-container{
         grid-template-columns: repeat(2, 1fr);
